完成微信扫码功能，但没有实现数据存储，目前采用内存存储方式测试
